multitenant/istio/03-app2-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-vs-2
  namespace: app-2
spec:
  hosts:
  - "api.example.com"
  gateways:
  - ops-team/app-gateway
  http:
  - name: "app-2-bar-route"
    match:
    - uri:
        prefix: "/bar"
    route:
    - destination:
        host: app-2.app-2.svc.cluster.local
        port:
          number: 8080
  - name: "app-2-default-route"
    route:
    - destination:
        host: app-2-default.app-2.svc.cluster.local
        port:
          number: 8080
